cron_log.txt
--- SISTEMA NEXUS-ALPHA: MODO ALTA CONVERSÃO ---
Produto de Alta Probabilidade: Ganhar dinheiro com Milhas
--- SITEMAP GERADO PARA O GOOGLE ---
--- SUCESSO! Robô escolheu e publicou: Ganhar dinheiro com Milhas ---
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import random, arquiteto, escoteiro, os, datetime
  File "/Users/Alan/nexus_alpha/arquiteto.py", line 1, in <module>
    import stripe
ModuleNotFoundError: No module named 'stripe'
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import escoteiro
  File "/Users/Alan/nexus_alpha/escoteiro.py", line 84
    return f"""
           ^
SyntaxError: f-string expression part cannot include a backslash
Traceback (most recent call last):
  File "integrador.py", line 1, in <module>
    import escoteiro
  File "/Users/Alan/nexus_alpha/escoteiro.py", line 84
    return f"""
           ^
SyntaxError: f-string expression part cannot include a backslash
